[package]
name = "kaiheila-rs"
version = "0.0.1"
edition = "2021"
[source.crates-io]
replace-with = 'tuna'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
[dependencies]
